...
                    }
                }
                ThemeToggleButton(isDarkTheme, onToggleDarkTheme)
                IconButton(onClick = onSignOut) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.Logout,
                        contentDescription = "Se deconnecter"
                    )
                }
            }
        )
        when (route) {
            "aisle" -> EmbeddedSearchBar(
...
private fun MainFloatingActionButton(
    route: String?,
    aisleViewModel: AisleViewModel
) {
    val context = LocalContext.current

    val contentDescription = if (route == "medicine") "Add medicine" else "Add aisle"

    FloatingActionButton(onClick = {
        when (route) {
            "medicine" -> context.startActivity(
                Intent(context, MedicineDetailActivity::class.java)
                    .putExtra("isNewMedicine", true)
...
